--- a/index.html
+++ b/index.html
@@ -11,19 +11,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>X Ayakkabı</title>
+        <link rel="shortcut icon" href="img/shoe.png" type="image/x-icon">
   </head>
   <body class="bg">
-      <!-- jumbtron start -->
-    <div class="jumbotron">
-        <h1 class="display-4 text-color" >X Ayakkabı</h1>
-        <h4 class="lead text-color">Spor deneyiminizi uç noktalara taşıyacak ayakkabılarımız sizi bekliyor. Hadi adrenalini daha fazla bekletme!</h4>
-        <hr class="my-4 block-color">
-        <p class="text-color">Tenis, basketbol ve koşu ayakkabılarımızdan dilediğini seçip sepete ekle, sporunu erteleme :)</p>
-        <p class="lead">
-          <a class="btn btn-color btn-lg" href="#" role="button">Alışverişe Koş</a>
-        </p>
+      <div class="container">
+          <!-- header start -->
+          <header class="row block-color text-color text-center fs-3 pb-2" style="background: rgb(150,206,180);
+          background: linear-gradient(90deg, rgba(150,206,180,1) 0%, rgba(255,173,96,1) 10%, rgba(255,173,96,1) 90%, rgba(150,206,180,1) 100%);">
+            <a href="index.html" class="col text-decoration-none text-reset">Ana Sayfa</a>
+            <a href="product.html" class="col text-decoration-none text-reset">Ürünlerimiz</a>
+            <a href="about-us.html" class="col text-decoration-none text-reset">Hakkımızda</a>
+          </header>
+          <!-- header end -->
+          <!-- jumbtron start -->
+          <div class="jumbotron text-center">
+            <h1 class="display-4 text-color" >X Ayakkabı</h1>
+            <h4 class="lead text-color mb-5">Spor deneyiminizi uç noktalara taşıyacak ayakkabılarımız sizi bekliyor. Hadi adrenalini daha fazla bekletme!</h4>
+            <p class="text-color">Tenis, basketbol ve koşu ayakkabılarımızdan dilediğini seçip sepete ekle, sporunu erteleme :)</p>
+            <p class="lead">
+              <a class="btn btn-color btn-lg mt-5" href="product.html" role="button">Alışverişe Koş</a>
+            </p>
+          </div>
+          <!-- jumbotron end -->
       </div>
-    <!-- jumbotron end -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
